$Id: ChangeLog,v 1.436 2008/06/25 08:39:03 freckle Exp $

2008-06-25  Matthias Ringwald <mringwal@inf.ethz.ch>
        * include/sys/heap.h, os/heap.c: Added NutHeapRealloc contributed
        by Moritz 'Monty' Struebe. 
        * include/arch/unix.h: escape realloc in unix emulation
        * include/arch/icc.h:  escape realloc for icc

2008-06-23  Harald Kipp  <harald.kipp@egnite.de>

	* boot/bootmon/Makedefs, boot/bootmon/bootmon.c, 
	boot/bootmon/npluled.h: Version 1.5.0. User LED support added.

	* boot/bootmon/tftp.c: Reduced retry time to become more responsive 
	to space input via RS-232.


2008-06-16 Matthias Ringwald <mringwal@inf.ethz.ch>
        * os/semaphore.c: fix bug in NutSemTryWait. It would block
        if sem->value == 0 instead of returning -1.


2008-06-16  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/dev/at91_spi.c: Fixes #1963841. Many thanks to Eric 
	Haver (very sharp eyes).

	* conf/arch/avr.nut, arch/Makefile: Temporarily removed wlandrv.c
	from build due to GCC 4.3 warning.

	* include/arch/avr/gcc.h: Added Thiago's patch to fix
	_SLEEP_MODE_MASK problem, which is no longer public in
	the latest avrlibc. 


2008-06-15  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/os/context_gcc.c, arch/avr/os/context_icc.c,
	crt/malloc.c, include/sys/heap.h, include/sys/thread.h,
	os/heap.c, os/thread.c: Rolled back all changes done
	after 2008-06-05. Parts of Moritz' code hadn't been well
	tested and his contribution was meant as an RFC.


2008-06-10  Matthias Ringwald <mringwal@inf.ethz.ch>
        * include/sys/heap.h: added missing include for C99 type usage


2008-06-09  Thiago A. Correa
        * ${list of modified files goes here}: NutHeapRealloc code
        contributed by Moritz Struebe.
        Add realloc to override libc's realloc using NutHeapRealloc

2008-06-05  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/dev/st7036_at91.c, conf/arch/arm.nut, 
	conf/at91sam7x-ek-radio.conf, conf/at91sam7x-ek.conf,